fix : in css replace in sectionmix align-items flexstart by flexend

--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ body {
 .section__mix {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: flex-end;
     justify-content: space-between;
     margin: 0 auto;
     gap: 10%;
